coś tam poprawki do dowolnego pliku